--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="page">
 
   <header class="header">
-    <img class="header__logo" src="./images/header-logo.svg" alt="Иконка Росии">
+    <img class="header__logo" src="./images/header__logo.png" alt="Иконка Росии">
     <div class="header__lang-links">
-      <a class="link header__lang-link" href="#">Ru</a>
+      <a class="link header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="link header__lang-link" href="#">En</a>
     </div>
   </header>
@@ -29,7 +29,7 @@
 
 
     <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, 
         но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели?
         На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами
@@ -39,11 +39,11 @@
         по родной стране.
         Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>Часовых поясов <span class="intro__list intro__list_numbers">11</span></li>
-        <li>Объектов природного наследия ЮНЕСКО<span class="intro__list intro__list_numbers"> 12</span></li>
-        <li>Объектов культурного наследия ЮНЕСКО<span class="intro__list intro__list_numbers"> 16</span></li>
-        <li>Природных заповедников<span class="intro__list intro__list_numbers"> 105</span></li>
-        <li>Аэропортов<span class="intro__list intro__list_numbers"> 241</span></li>
+        <li>Часовых поясов <span class="intro__numbers">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО<span class="intro__numbers"> 12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО<span class="intro__numbers"> 16</span></li>
+        <li>Природных заповедников<span class="intro__numbers"> 105</span></li>
+        <li>Аэропортов<span class="intro__numbers"> 241</span></li>
       </ul>  
     </section>
 
@@ -64,10 +64,10 @@
     </section>
 
     <section class="places">
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
-          <h3 class="place__url-heading">URL</h3>
+          <p class="place__url-heading">Url</p>
           <a class="link place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
@@ -76,7 +76,7 @@
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн,
             вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны
             и подёрнутого рябью волн Балтийского моря с другой.
-            Уникальная природная зона на краю российского анклава.</p>
+            Уникальная природная зона&nbsp;на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается.
             Для путешественника и исследователя там же по соседству — самая западная точка России,
             Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
@@ -84,12 +84,12 @@
             окуная в спокойствие природы и запах стального, прохладного моря.
           </p> 
           </div>
-      </div>
+      </article>
     
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
-          <h3 class="place__url-heading">URL</h3>
+          <p class="place__url-heading">Url</p>
           <a class="link place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
         </div>
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Полуостров Кольский">
@@ -105,12 +105,12 @@
             сияние начинает сбываться с билетом в Мурманск.
           </p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
-          <h3 class="place__url-heading">URL</h3>
+          <p class="place__url-heading">Url</p>
           <a class="link place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube
           </a>
         </div>
@@ -126,12 +126,12 @@
           над хребтами летают орлы, а на равнинах пасутся косули.
           И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
-          <h3 class="place__url-heading">URL</h3>
+          <p class="place__url-heading">Url</p>
           <a class="link place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
@@ -145,30 +145,31 @@
           к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
           В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
-      </div>
+      </article>
 
-      <div class="place">
+      <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
-          <h3 class="place__url-heading">URL</h3>
+          <p class="place__url-heading">Url</p>
           <a class="link place__link"  href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
-        
-        <p class="place__paragraphs place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-          сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров
-           — леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
-           Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
-          чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы.
-          А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями.
-          Чтобы все знали, кто тут хозяин.</p>
-      </div>
+        <div class="place__paragraphs">
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+            сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров
+             — леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
+             Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше,
+            чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы.
+            А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями.
+            Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </article>
     </section>
 
     <section class="cover">
       <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие
+        <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе —&nbsp;путешествие
         от столицы до Байкала на электричках.</p>
       </a>
     </section>
@@ -176,7 +177,7 @@
   </main>
 
  <footer class="footer">
-  <nav class="nav">
+  <nav class="footer__nav">
     <a class="link footer__link" href="https://yandex.ru/maps">Карты</a>
     <a class="link footer__link" href="https://yandex.ru/pogoda">Погода</a>
     <a class="link footer__link" href="https://rasp.yandex.ru">Расписание</a>
