--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="page">
 
   <header class="header">
-    <img class="header__logo" src="./images/header__logo.png" alt="Иконка Росии">
+    <img class="header__logo" src="./images/header__logo-svg.svg" alt="Иконка Росии">
     <div class="header__lang-links">
       <a class="link header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="link header__lang-link" href="#">En</a>
@@ -178,11 +178,11 @@
 
  <footer class="footer">
   <nav class="footer__nav">
-    <a class="link footer__link" href="https://yandex.ru/maps">Карты</a>
-    <a class="link footer__link" href="https://yandex.ru/pogoda">Погода</a>
-    <a class="link footer__link" href="https://rasp.yandex.ru">Расписание</a>
-    <a class="link footer__link" href="https://calendar.yandex.ru">Календарь</a>
-    <a class="link footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    <a class="link footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+    <a class="link footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+    <a class="link footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+    <a class="link footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+    <a class="link footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
   </nav>
   <p class="footer__copyright">2023. Анна Тетерина</p>
  </footer>
